--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<p style="text-align: center;"><video src="D:/夕阳细雨网站/夕阳细雨视频/爆笑一刻.mp4" autoplay controls loop height="200" width="300"></video></p>
 
-	<p style="text-align: center;"><audio src="D:\夕阳细雨网站\夕阳细雨音乐\航向你的海岛 - 泠鸢yousa.flac" autoplay controls loop></audio></p>
+	<p style="text-align: center;"><audio src="D:\夕阳细雨网站\夕阳细雨音乐/航向你的海岛 - 泠鸢yousa.mp3" autoplay controls loop></audio></p>
 
 	<p style="text-align: center;"><a href="https://www.bilibili.com/video/BV1pw411A7da?t=0.0" target="blank"><img src="D:\夕阳细雨网站\夕阳细雨图片/微信图片_20230304215416.png" height="200" width="300"></a></p>
 
