--- a/index.html
+++ b/index.html
@@ -1,25 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>夕阳细雨</title>
+	<!--<style>
+	body{
+		background-image:url("微信图片_20230304215107.png");
+		background-repeat: no-repeat;
+		background-size: cover;
+	}	
+	</style>-->
 </head>
-<body background="D:\夕阳细雨网站\夕阳细雨图片\微信图片_20230304215107.png">
+<body >
+     <table border="1" align="center" width="1300" height="700" cellspacing="0">
 
-	<h1 style="text-align: center;color: blue" >夕阳细雨的小网页</h1>
+     	<caption><big><b>班级课程表</b></big></caption>
 
-	<p style="text-align: center;"><video src="夕阳细雨网站/夕阳细雨视频/原神.mp4" controls="" autoplay="" loop="" height="200" width="300"></video></p>
+     	<caption>
+     		<div style="float: left;white-space: pre;">班级名称: 23软件2班(64 人)      班级代码: 23250302</div>
+     	    <div style="float: right;white-space: pre;">2023-2024学年第 1 学期</div>
+     	</caption>
 
-	<p style="text-align: center;"><video src="夕阳细雨网站/夕阳细雨视频/带你入坑原神.mp4" controls="" autoplay="" loop="" height="200" width="300"></video></p>
+     	<tr>
+     		<th colspan="2">节次</th>
+     		<th width="230">星期一</th>
+     		<th width="230">星期二</th>
+     		<th width="230">星期三</th>
+     		<th width="230">星期四</th>
+     		<th width="230">星期五</th>
+     		<th width="150"></th>
+     	</tr>
 
-	<p style="text-align: center;"><video src="夕阳细雨网站/夕阳细雨视频/爆笑一刻.mp4" autoplay controls loop height="200" width="300"></video></p>
+     	<tr align="center">
+     		<td rowspan="2" width="30">上午</td>
+     		<td height="150" width="30">第一二节</td>
+     		<td>网页设计与制作<br>实训楼206【机房】<br>张秉天【无方向】</td>
+     		<td></td>
+     		<td></td>
+     		<td></td>
+     		<td>高职英语<br>酒管楼B202【多媒体教室】<br>孟柳红【无方向】</td>
+     		<td>8: 25-9: 10<br>9: 20-10: 05</td>
+     	</tr>
 
-	<p style="text-align: center;"><audio src="夕阳细雨网站/夕阳细雨音乐/航向你的海岛 - 泠鸢yousa.mp3" autoplay controls loop></audio></p>
+     	<tr align="center">
+     		<td height="150">第三四节</td>
+     		<td></td>
+     		<td>创新创业教育  <font color="red">单</font><br>综合楼Z102【阶梯教室】<br>刘润星【无方向】</td>
+     		<td></td>
+     		<td>大学生职业生涯规划 <font color="red">单</font><br>酒管楼A101【阶梯教室】<br>符元垣【无方向】</td>
+     		<td>习近平新时代中国特色社会主义思想概论<br>酒管楼 C103【阶梯教室】<br>宋凯华【无方向】</td>
+     		<td>10: 20-11: 05<br>11: 15-12: 00</td>
+     	</tr>
 
-	<p style="text-align: center;"><a href="https://www.bilibili.com/video/BV1pw411A7da?t=0.0" target="blank"><img src="夕阳细雨网站/夕阳细雨图片/微信图片_20230304215416.png" height="200" width="300"></a></p>
+     	<tr align="center">
+     		<td rowspan="2">下午</td>
+     		<td height="150">第五六节</td>
+     		<td>Java程序设计<br>实训楼 213【机房】<br>谢铭扬【无方向】</td>
+     		<td>Java程序设计<br>实训楼 213【机房】<br>谢铭扬【无方向】</td>
+     		<td></td>
+     		<td>大学体育<br>田径场【操场】<br>公共4【无方向】</td>
+     		<td>国家安全教育 <font style="color: red">双</font><br>综合楼 Z202【阶梯教室】<br>顾国荣【无方向】</td>
+     		<td>14: 30-15: 15<br>15: 25-16: 10</td>
+     	</tr>
 
-	<p style="text-align: center;"><a href="https://www.bilibili.com/video/BV1FR4y1i77b?t=0.0" target="blank"><big>胡桃摇摆</big></a></p>
+     	<tr align="center">
+     		<td height="150">第七八节</td>
+     		<td>中共党史 <font style="color: red">双</font><br>综合楼Z110【多媒体教室】<br>张晓燕【无方向】</td>
+     		<td>信息技术 <font style="color: red">单</font><br>酒管楼A503云桌面【机房】<br>余立【无方向】<br>习近平新时代中国特色社会主义思想概论 <font style="color: red">双</font><br>综合楼Z201【阶梯教室】<br>宋凯华【无方向】</td>
+     		<td>信息技术<br>实训楼3A06【机房】<br>余立【无方向】</td>
+     		<td>网页设计与制作<br>实训楼206【机房】<br>张秉天【无方向】</td>
+     		<td></td>
+     		<td>16: 25-17: 10<br>17: 20-18: 05</td>
+     	</tr>
 
-	<p style="text-align: center;"><a href="https://www.bilibili.com/video/BV1pP41157vF?t=0.0" target="blank"><big>警告你！别点</big></a></p>
-    
+     	<tr align="center">
+     		<td>晚上</td>
+     		<td height="150">第九十节</td>
+     		<td>大学生心理健康教育<br>综合楼Z202【阶梯教室】<br>郑雪姗【无方向】</td>
+     		<td></td>
+     		<td></td>
+     		<td>高职英语 <font style="color: red">单</font><br>酒管楼 B202【多媒体教室】<br>孟柳红【无方向】</td>
+     		<td></td>
+     		<td>19: 30-20: 15<br>20: 20-21: 05</td>
+     	</tr>
+     	
+     </table>
+
+     <embed height="0" width="0" src="./航向你的海岛 - 泠鸢yousa.mp3"></embed>
+
 </body>
 </html>
