--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
      	
      </table>
 
-     <embed height="0" width="0" src="./航向你的海岛 - 泠鸢yousa.mp3"></embed>
+	<audio autoplay="" loop="" class="music" style="display: none;">
+	 	<source src="./航向你的海岛 - 泠鸢yousa.mp3" type="audio/mpeg"/>
+	 </audio>
 
 </body>
 </html>
