--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
      	
      </table>
 
-	<audio autoplay="" loop="" class="music" style="display: none;">
+	<div>
+	</div><audio autoplay="" loop="" class="music" style="display: none;">
 	 	<source src="./航向你的海岛 - 泠鸢yousa.mp3" type="audio/mpeg"/>
 	 </audio>
-
+	</div>
 </body>
 </html>
