--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      </table>
 
 	<div>
-	</div><audio autoplay="" loop="" class="music" style="display: none;">
+	<audio autoplay="" loop="" class="music" style="display: none;">
 	 	<source src="./航向你的海岛 - 泠鸢yousa.mp3" type="audio/mpeg"/>
 	 </audio>
 	</div>
